--- a/cv_and_lasso.ipynb
+++ b/cv_and_lasso.ipynb
@@ -1336,6 +1336,16 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "LARGER WEIGHTS (X) MEANS LARGER VARIANCE"
+      ],
+      "metadata": {
+        "id": "SHyNhnmP32Zh"
+      },
+      "id": "SHyNhnmP32Zh"
+    },
+    {
+      "cell_type": "markdown",
       "id": "ef7bea3c-0d71-41e1-bcd5-43f76c3d7d0a",
       "metadata": {
         "id": "ef7bea3c-0d71-41e1-bcd5-43f76c3d7d0a"
@@ -1346,6 +1356,16 @@
         "\n",
         "![](https://github.com/annagirerd/cv_and_lasso/blob/main/ols_minimization.png?raw=1)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "the computer is gonna do this with a function -API-"
+      ],
+      "metadata": {
+        "id": "dozqcWns6Hoo"
+      },
+      "id": "dozqcWns6Hoo"
     },
     {
       "cell_type": "markdown",
@@ -1362,6 +1382,26 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Don't want to leave the box if the box goes around circle --> ppl have too much money! budget constraint is not an issue"
+      ],
+      "metadata": {
+        "id": "4CPTk-eb7Ho0"
+      },
+      "id": "4CPTk-eb7Ho0"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "solution is at tangent--> la grange optimization"
+      ],
+      "metadata": {
+        "id": "N6wxlYXX74eJ"
+      },
+      "id": "N6wxlYXX74eJ"
+    },
+    {
+      "cell_type": "markdown",
       "id": "08f07808-d242-49d7-9776-c50fa2ee0514",
       "metadata": {
         "id": "08f07808-d242-49d7-9776-c50fa2ee0514"
@@ -1372,6 +1412,26 @@
         "\n",
         "![](https://github.com/annagirerd/cv_and_lasso/blob/main/lasso_regression.png?raw=1)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Regularization/chrunkage ensures our coefficients are better --> tradeoff is know that its not unbiased"
+      ],
+      "metadata": {
+        "id": "AJn_gpwc8a_m"
+      },
+      "id": "AJn_gpwc8a_m"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If have two highly correlateed variables --> lasso reduces weight on one of variables and shrinks it"
+      ],
+      "metadata": {
+        "id": "XdKxwYaT9Xen"
+      },
+      "id": "XdKxwYaT9Xen"
     },
     {
       "cell_type": "markdown",
@@ -1405,6 +1465,17 @@
         "- Key intuition: **As $\\lambda$ goes up, increasing each $|b_k|$ becomes increasingly costly, penalizing \"complex\" explanations with large coefficients**\n",
         "- \"...where does cross validation come into this?\" The coefficients are selected by 5-fold CV with the last fold used to minimize SSE and pick $b$, taking the CV-selected $\\lambda$ as given  "
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Treat lambda as the cost of buying more B\n",
+        "- lambda is size of penalty for picking larger coefficient"
+      ],
+      "metadata": {
+        "id": "OsvG_UCH-RL9"
+      },
+      "id": "OsvG_UCH-RL9"
     },
     {
       "cell_type": "markdown",
@@ -2192,6 +2263,36 @@
         "sdf = pd.DataFrame({'variable': X.columns, 'slope':reg.coef_})\n",
         "sdf"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Lasso usually throws away more than half the variables --> simplifies model"
+      ],
+      "metadata": {
+        "id": "VCDcneKN_4_L"
+      },
+      "id": "VCDcneKN_4_L"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "la grange multiplier --> lamda --> no one does the system of equations like in calc"
+      ],
+      "metadata": {
+        "id": "J3z5hB2cAovc"
+      },
+      "id": "J3z5hB2cAovc"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "j6_b55krAogm"
+      },
+      "id": "j6_b55krAogm",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
